# c_cpp_template_cmake_project

./: CMakeList2.txt  CMakeLists.txt
include/: test.h
src/: main.cpp  test.cpp
